fix: header action svgs misaligned

--- a/packages/gatsby-theme-carbon/src/components/Header/Header.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/Header/Header.module.scss
@@ -1,9 +1,9 @@
 @import '~carbon-components/scss/globals/scss/layout';
 
 .header button {
-  svg {
-    margin-top: $spacing-02;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 header.header {
